# zecwallet-light-cli

./: .gitignore  Cargo.toml  README.md  bip39bug.md  blazesync_diagrams.dot  build.rs  build.sh  mkrelease.sh
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  version.rs
demo-www/: index.html  index.js  package-lock.json  package.json
docker/: Dockerfile
envoy/: envoy.yaml
lib/: Cargo.toml  build.rs
lib/proto/: service.proto
lib/src/: blaze.rs  checkpoints.rs  commands.rs  compact_formats.rs  error_helpers.rs  grpc_connector.rs  grpcconnector.rs  lib.rs  lightclient.rs  lightwallet.rs
lib/src/blaze/: block_witness_data.rs  fetch_compact_blocks.rs  fetch_full_tx.rs  fetch_taddr_txns.rs  fixed_size_buffer.rs  node_and_witness_data.rs  nullifier_data.rs  sparse_trie_map.rs  sync_status.rs  syncdata.rs  test_utils.rs  trial_decryptions.rs  update_notes.rs
lib/src/lightclient/: checkpoints.rs  lightclient_config.rs  test_server.rs  tests.rs
lib/src/lightwallet/: address.rs  base58.rs  bugs.rs  data.rs  extended_key.rs  fee.rs  keys.rs  message.rs  prover.rs  tests.rs  utils.rs  wallet_txns.rs  walletzkey.rs
proto/: service.proto
res/: lightwalletd-zecwallet-co-chain.pem
rust-lightclient/: .gitignore  Cargo.toml
rust-lightclient/proto/: service.proto
rust-lightclient/src/: address.rs  commands.rs  lightclient.rs  lightwallet.rs  main.rs  prover.rs
src/: address.rs  commands.rs  grpcconnector.rs  lightclient.rs  lightwallet.rs  main.rs
src/lightwallet/: data.rs  extended_key.rs  mod.rs
zcash-client-backend-wasm/: Cargo.toml  LICENSE_MIT
zcash-client-backend-wasm/src/: address.rs  lib.rs
zcash-client-sdk-js/: package-lock.json  package.json  webpack.config.js
zcash-client-sdk-js/src/: compact_formats_pb.js  index.js  service_grpc_web_pb.js  service_pb.js
