[package]
name = "rust-lightclient"
version = "0.1.0"
edition = "2018"

[dependencies]
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
futures = "0.1"
bytes = "0.4"
base58 = "0.1.0"
log = "0.4"
log4rs = { version = "0.8.3", default-features = false, features = ["file", "file_appender"]}
dirs = "2.0.2"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = "0.1"
hyper = "0.12"
tower-util = "0.1"
hex = "0.3"
protobuf = "2"
rustyline = "5.0.2"
byteorder = "1"
rand = "0.5.6"
json = "0.12.0"
shellwords = "1.0.0"
bip39 = "0.6.0-beta.1"
clap = "2.33"
secp256k1 = "=0.15.0"
sha2 = "0.8.0"
ripemd160 = "0.8.0"

[dependencies.bellman]
path = "../librustzcash/bellman"
default-features = false
features = ["groth16"]

[dependencies.pairing]
path = "../librustzcash/pairing"

[dependencies.zcash_client_backend]
path = "../librustzcash/zcash_client_backend"
default-features = false

[dependencies.zcash_primitives]
path = "../librustzcash/zcash_primitives"
default-features = false
features = ["transparent-inputs"]

[dependencies.zcash_proofs]
path = "../librustzcash/zcash_proofs"
default-features = false

[dependencies.ff]
path = "../librustzcash/ff"
features = ["ff_derive"]

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc",  features = ["tower-hyper"]  }

[profile.release]
#debug = true