[package]
name = "zeclite-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
futures = "0.1"
bytes = "0.4"
base58 = "0.1.0"
log = "0.4"
log4rs = { version = "0.8.3", default-features = false, features = ["file", "file_appender"]}
dirs = "2.0.2"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = "0.1"
hyper = "0.12"
tower-util = "0.1"
hex = "0.3"
protobuf = "2"
rustyline = "5.0.2"
byteorder = "1"
rand = "0.5.6"
json = "0.12.0"
shellwords = "1.0.0"
tiny-bip39 = "0.6.2"
clap = "2.33"
secp256k1 = "=0.15.0"
sha2 = "0.8.0"
ripemd160 = "0.8.0"
ring = "0.14.0"
lazy_static = "1.2.0"

[dependencies.bellman]
git = "https://github.com/adityapk00/librustzcash.git"
default-features = false
features = ["groth16"]

[dependencies.pairing]
git = "https://github.com/adityapk00/librustzcash.git"

[dependencies.zcash_client_backend]
git = "https://github.com/adityapk00/librustzcash.git"
default-features = false

[dependencies.zcash_primitives]
git = "https://github.com/adityapk00/librustzcash.git"
default-features = false
features = ["transparent-inputs"]

[dependencies.zcash_proofs]
git = "https://github.com/adityapk00/librustzcash.git"
default-features = false

[dependencies.ff]
git = "https://github.com/adityapk00/librustzcash.git"
features = ["ff_derive"]

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc",  features = ["tower-hyper"]  }

[dev-dependencies]
rand_core = "0.5.1"

[profile.release]
debug = true