[package]
name = "zecwalletlitelib"
version = "0.1.0"
edition = "2018"

[features]
default = ["embed_params"]
embed_params = []

[dependencies]
base58 = "0.1.0"
log = "0.4"
log4rs = "0.8.3"
dirs = "2.0.2"
http = "0.2"
hex = "0.3"
protobuf = "2"
byteorder = "1"
json = "0.12.0"
tiny-bip39 = "0.6.2"
secp256k1 = "=0.19.0"
sha2 = "0.8.0"
ripemd160 = "0.8.0"
lazy_static = "1.2.0"
rust-embed = { version = "5.1.0", features = ["debug-embed"] }
rand = "0.7.2"
sodiumoxide = "0.2.5"
ring = "0.16.9"
libflate = "0.1"
subtle = "2"
threadpool = "1.8.0"
num_cpus = "1.12.0"

tonic = { version = "0.2.1", features = ["tls", "tls-roots"] }
bytes = "0.4"
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds", "full"] }
tokio-rustls = { version = "0.13.0" }
webpki = "0.21.0"
webpki-roots = "0.18.0"

bellman = { version = "0.8", default-features = false, features = ["groth16"] }
pairing = "0.18.0"
ff = "0.8"
jubjub = "0.5.1"
bls12_381 = "0.3.1"
group = "0.8"

[dependencies.zcash_client_backend]
git = "https://github.com/adityapk00/librustzcash"
rev = "3cb555b2d4c4d05e95c5e9663fe91521a670ebfc"
default-features = false

[dependencies.zcash_primitives]
git = "https://github.com/adityapk00/librustzcash"
rev = "3cb555b2d4c4d05e95c5e9663fe91521a670ebfc"
features = ["transparent-inputs"]

[dependencies.zcash_proofs]
git = "https://github.com/adityapk00/librustzcash"
rev = "3cb555b2d4c4d05e95c5e9663fe91521a670ebfc"

[build-dependencies]
tonic-build = "0.1.1"

[dev-dependencies]
tempdir = "0.3.7"

