[package]
name = "zecwalletlitelib"
version = "0.1.0"
authors = ["Aditya Kulkarni <adityapk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embed_params"]
embed_params = []


[dependencies]
arr_macro = "0.1.3"
base64 = "0.13.0"
bytes = "0.4"
log4rs = "1.0.0"
rand = "0.7.3"
http = "0.2.4"
tonic = {version = "0.4.3", features = ["tls", "tls-roots"]}
prost = "0.7.0"
tokio =  { version = "1.6.0", features = ["full"] }
tokio-stream = "0.1.6"
tokio-rustls = "0.22.0"
futures = "0.3.15"
log = "0.4.14"
hex = "0.3"
ring = "0.16.20"
dirs = "3.0.2"
json = "0.12.4"
webpki-roots = "0.21.0"

lazy_static = "1.4.0"
secp256k1 = "=0.20.2"
ripemd160 = "0.9.1"
sha2 = "0.9.5"
base58 = "0.1.0"
tiny-bip39 = "0.8.0"
sodiumoxide = "0.2.5"
byteorder = "1"

pairing = "0.18.0"
ff = "0.8"
jubjub = "0.5.1"
bls12_381 = "0.3.1"
group = "0.8"

rust-embed = { version = "5.1.0", features = ["debug-embed"] }

zcash_primitives = { git = "https://github.com/adityapk00/librustzcash", rev = "adeb3ec4ad15480482bc2962bc9fe453814db9ee", features = ["transparent-inputs"] }
zcash_client_backend = { git = "https://github.com/adityapk00/librustzcash", rev = "adeb3ec4ad15480482bc2962bc9fe453814db9ee"}
zcash_proofs = { git = "https://github.com/adityapk00/librustzcash", rev = "adeb3ec4ad15480482bc2962bc9fe453814db9ee", features = ["multicore"]}

[dev-dependencies]
portpicker = "0.1.0"
tempdir = "0.3.7"

[build-dependencies]
tonic-build = "0.4.2"
