[package]
name = "rust-lightclient"
version = "0.1.0"
edition = "2018"

[dependencies]
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = "0.1"
hyper = "0.12"
tower-service = "0.2"
tower-util = "0.1"
hex = "0.3"
protobuf = "2"
rustyline = "5.0.2"
byteorder = "1"

[dependencies.bellman]
git = "https://github.com/adityapk00/librustzcash.git"
branch = "lightclient-work"
default-features = false
features = ["groth16"]

[dependencies.pairing]
git = "https://github.com/adityapk00/librustzcash.git"
branch = "lightclient-work"

[dependencies.zcash_client_backend]
git = "https://github.com/adityapk00/librustzcash.git"
branch = "lightclient-work"
default-features = false

[dependencies.zcash_primitives]
git = "https://github.com/adityapk00/librustzcash.git"
branch = "lightclient-work"
default-features = false

[dependencies.zcash_proofs]
git = "https://github.com/adityapk00/librustzcash.git"
branch = "lightclient-work"
default-features = false


[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc",  features = ["tower-hyper"]  }

[profile.release]
debug = true