[package]
name = "zcash-client-backend-wasm"
version = "0.0.1"
authors = ["Jack Grigg <jack@z.cash>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
hex = "0.3"
protobuf = "2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }

# We don't use these crates directly, but we add it as a dependency so we can
# enable necessary features for WASM compatibility.
rand = { version = "0.6", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.bellman]
git = "https://github.com/str4d/librustzcash.git"
branch = "demo-wasm"
default-features = false
features = ["groth16"]

[dependencies.pairing]
git = "https://github.com/str4d/librustzcash.git"
branch = "demo-wasm"

[dependencies.sapling-crypto]
git = "https://github.com/str4d/librustzcash.git"
branch = "demo-wasm"
default-features = false

[dependencies.zcash_client_backend]
git = "https://github.com/str4d/librustzcash.git"
branch = "demo-wasm"
default-features = false

[dependencies.zcash_primitives]
git = "https://github.com/str4d/librustzcash.git"
branch = "demo-wasm"
default-features = false

[dependencies.zcash_proofs]
git = "https://github.com/str4d/librustzcash.git"
branch = "demo-wasm"
default-features = false

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
